# simple-oscillator

./: .gitignore  README.md  meson.build
src/: Gui.cpp  Gui.hpp  Oscillator.cpp  Oscillator.hpp  Processing.hpp  main.cpp  main.hpp  meson.build
src/GUI/: Slider.cpp  Slider.hpp
